@@ -17,6 +17,7 @@ dependencies {
 
 tasks.withType(Test).configureEach {
     jvmArgs += [
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/java.net=ALL-UNNAMED",
         "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
     ]
@@ -26,6 +27,7 @@ graalvmNative {
     binaries {
         all {
             buildArgs.addAll([
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
                 '--add-opens=java.base/java.net=ALL-UNNAMED',
                 '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
             ])
